@@ -5874,3 +5874,4 @@ v0.92.0.11:
     - Adds a ring of particles on top of the various spawn points.
     - Includes Jail, Outpost, Town and Nation Spawns.
   - Fix $0 plot taxes being paid by residents.
+  - Fix for a "null" feedback message when using /t outlaw add NAME.
